# gs-app

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.json  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
sidecar/: README.md  build.py  launcher.py  pyproject.toml
sidecar/pivot_sidecar/: __main__.py  ipc.py  server.py  xlsx.py
sidecar/pivot_sidecar/tasks/: __init__.py  base.py  mp_cn.py  mp_in.py  va_pay.py  va_tw_payroll_split.py  va_vn_ps.py  va_vn_r.py  ww_au.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  sidecar.rs
src/components/: Sidebar.tsx  TitleBar.tsx  UpdateBanner.tsx
src/components/dashboard/: FxPanel.tsx
src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  PickerButton.tsx  Progress.tsx
src/lib/: fx-api.ts  fx.ts  ipc.ts  utils.ts
src/routes/: Dashboard.tsx  History.tsx  Payroll.tsx  Payslip.tsx  Settings.tsx  Task.tsx  VnPayrollReport.tsx
src/styles/: globals.css
src/tasks/: labels.ts  registry.ts
worker/: README.md  worker.js  wrangler.toml
