[project]
name = "pivot-sidecar"
version = "0.1.0"
description = "Pivot Desk · Python data-processing sidecar"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    "pandas>=2.2",
    "pypdf>=4.3",
    "pydantic>=2.7",
    "msoffcrypto-tool>=5.4",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.10"]

[project.scripts]
pivot-sidecar = "pivot_sidecar.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pivot_sidecar*"]
