[package]
name = "pivot-desk"
version = "0.1.0"
description = "Pivot Desk · 数据处理工作台"
authors = ["Pivot Desk Contributors"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "pivot_desk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell  = "2"
tauri-plugin-fs     = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
tokio       = { version = "1", features = ["full"] }
anyhow      = "1"
once_cell   = "1"
log         = "0.4"
env_logger  = "0.11"
sysinfo     = "0.31"
chrono      = { version = "0.4", features = ["clock"] }
zip         = { version = "2", default-features = false, features = ["deflate"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
